<resources>
    <string name="app_name">2048Simple</string>
    <string name="Start4x4">Start the 4X4 game!</string>
    <string name="Four">4</string>
    <string name="TopButton">Up</string>
    <string name="BottomButton">Down</string>
    <string name="LeftButton">Left</string>
    <string name="RightButton">Right</string>
    <string name="EmptyNumber" />
    <string name="GameLogo"><b>2048</b></string>
    <string name="Simple"><i>Simple</i></string>
    <string name="Score">Score:</string>
    <string name="Record">Record:</string>
    <string name="GameOver">Game Over</string>
    <string name="NewGame">Start a new Game</string>
    <string name="Reverse">Reverse previous move</string>
    <string name="sChangePlayer">Change</string>
</resources>
