<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TouchActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="368dp"
        android:layout_height="236dp"
        app:layout_constraintBottom_toTopOf="@+id/NumbersLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/LogoType"
            android:layout_width="170dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayoutButtons"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayoutScore"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49">

            <TextView
                android:id="@+id/textView"
                android:layout_width="154dp"
                android:layout_height="33dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/GameLogo"
                android:textColor="@color/colorDarkYellow"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="154dp"
                android:layout_height="28dp"
                android:gravity="top|end"
                android:text="@string/Simple"
                android:textColor="@color/colorRed"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutScore"
            android:layout_width="170dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayoutButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/LogoType"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="154dp"
                android:layout_height="34dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Score"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textViewCurrentScore"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewCurrentScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorYellow"
                    android:text=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="154dp"
                android:layout_height="34dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Record"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textViewRecord"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorYellow"
                    android:text=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutButtons"
            android:layout_width="346dp"
            android:layout_height="114dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/LogoType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LogoType">

            <Button
                android:id="@+id/buttonStartGame"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:onClick="onClick"
                android:text="@string/NewGame"
                app:layout_constraintBottom_toTopOf="@+id/buttonReverseMove"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonReverseMove"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:onClick="onClick"
                android:text="@string/Reverse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonStartGame" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/NumbersLayout"
        android:layout_width="295dp"
        android:layout_height="259dp"
        android:background="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/number30"
            android:layout_width="63dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number20"
            app:layout_constraintEnd_toStartOf="@+id/number31"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number40" />

        <TextView
            android:id="@+id/number31"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number21"
            app:layout_constraintEnd_toStartOf="@+id/number32"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number30"
            app:layout_constraintTop_toBottomOf="@+id/number41" />

        <TextView
            android:id="@+id/number20"
            android:layout_width="63dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number10"
            app:layout_constraintEnd_toStartOf="@+id/number21"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number30" />

        <TextView
            android:id="@+id/number21"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number11"
            app:layout_constraintEnd_toStartOf="@+id/number22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number20"
            app:layout_constraintTop_toBottomOf="@+id/number31" />

        <TextView
            android:id="@+id/number22"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number12"
            app:layout_constraintEnd_toStartOf="@+id/number23"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number21"
            app:layout_constraintTop_toBottomOf="@+id/number32" />

        <TextView
            android:id="@+id/number23"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number22"
            app:layout_constraintTop_toBottomOf="@+id/number33" />

        <TextView
            android:id="@+id/number10"
            android:layout_width="63dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/number11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number20" />

        <TextView
            android:id="@+id/number11"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/number12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number10"
            app:layout_constraintTop_toBottomOf="@+id/number21" />

        <TextView
            android:id="@+id/number12"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/number13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number11"
            app:layout_constraintTop_toBottomOf="@+id/number22" />

        <TextView
            android:id="@+id/number13"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number12"
            app:layout_constraintTop_toBottomOf="@+id/number23" />

        <TextView
            android:id="@+id/number32"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number22"
            app:layout_constraintEnd_toStartOf="@+id/number33"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number31"
            app:layout_constraintTop_toBottomOf="@+id/number42" />

        <TextView
            android:id="@+id/number33"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number32"
            app:layout_constraintTop_toBottomOf="@+id/number43" />

        <TextView
            android:id="@+id/number40"
            android:layout_width="63dp"
            android:layout_height="54dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number30"
            app:layout_constraintEnd_toStartOf="@+id/number41"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number41"
            android:layout_width="64dp"
            android:layout_height="54dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number31"
            app:layout_constraintEnd_toStartOf="@+id/number42"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number40"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number42"
            android:layout_width="64dp"
            android:layout_height="54dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number32"
            app:layout_constraintEnd_toStartOf="@+id/number43"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number41"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number43"
            android:layout_width="64dp"
            android:layout_height="54dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/EmptyNumber"
            android:textSize="@dimen/app_2048_numbers_size"
            app:layout_constraintBottom_toTopOf="@+id/number33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/number42"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>